prevent menu horizontal scroll

--- a/css/menu.scss
+++ b/css/menu.scss
@@ -11,6 +11,7 @@
   padding: 20px;
   overflow: auto;
   overflow-y: scroll;
+  overflow-x: clip;
   overscroll-behavior-y: contain;
 
   background-color: var(--bg-color);
